[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["murtazoxurramov <murtazoxurramov1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
piccolo = {extras = ["postgres"], version = "^1.3.2"}
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
piccolo-admin = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
